tests/syntax_error/arrow_field.jou
def main() -> None:
    x = foo->bar  # Error: use . instead of ->
